--- a/main.css
+++ b/main.css
@@ -18,6 +18,10 @@ body {
  background: var(--mainWhite);
   font-family: "Lato", sans-serif;
 }
+li {
+
+}
+
 /* --------------- Navbar ---------------- */
 .navbar {
   position: sticky;
@@ -165,6 +169,64 @@ body {
 }
 
 /* ---------------End of Products ---------------- */
+/* --------------- hamburger menu ---------------- */
+
+.harmburger-overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  transition: var(--mainTransition);
+  background: rgb(240, 157, 81, 0.5);
+  z-index: 2;
+  visibility: hidden;
+}
+.hamburger-btn {
+  cursor: pointer;
+}
+.hamburger {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  /* overflow: scroll; */
+  z-index: 3;
+  background: rgb(231, 226, 221);
+  padding: 1.5rem;
+  transition: var(--mainTransition);
+  transform: translateX(-300%);
+}
+.showHamburger {
+  transform: translateX(-200%);
+}
+.transparentBcg {
+  visibility: visible;
+}
+@media screen and (min-width: 768px) {
+  .hamburger {
+    width: 30vw;
+    min-width: 450px;
+  }
+}
+
+.close-hamburger {
+  font-size: 1.7rem;
+  cursor: pointer;
+  float: right;
+}
+.hamburger h2 {
+  text-transform: capitalize;
+  text-align: center;
+  letter-spacing: var(--mainSpacing);
+  margin-bottom: 2rem;
+}
+
+
+
+/* --------------- End of hamburger menu ---------------- */
+
 /* --------------- Cart ---------------- */
 .cart-overlay {
   position: fixed;
